--- a/exercicios/desafio012/style/style.css
+++ b/exercicios/desafio012/style/style.css
@@ -54,13 +54,27 @@ section.branco{
 section.imagem{
     background-color: blue;
     color: white;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 section.imagem p{
     display: inline-block;
     
-    background-color: rgba(0, 0, 0, 0.473);
+    background-color: rgba(0, 0, 0, 0.863);
     padding: 20px;
+}
+
+section#img1{
+    background-image: url(../imagens/background003.jpg);
+    background-repeat: no-repeat;
+    background-position: right top;
+}
+
+section#img2{
+    background-image: url(../imagens/background004.jpg);
+    background-repeat: no-repeat;
+    background-position: right top;
 }
 
 footer{
